--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -7,6 +7,8 @@
   border-radius: 10px;
   margin-bottom: 10px;
   background-color: #f9f9f9;
+  min-width: 300px;
+  overflow: hidden;
 }
 
 .contactInfo {
