--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -5,12 +5,16 @@
   background-color: #f9f9f9;
   margin-bottom: 10px;
   max-width: 558.4px;
+  min-width: 300px;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
 }
 
 .field {
-  width: 100%; /* Make input fill the container */
-  padding: 8px; /* Optional padding for the input */
-  box-sizing: border-box; /* Include padding in the width */
+  width: 100%; 
+  padding: 8px; 
+  box-sizing: border-box;
   margin-bottom: 10px;
 }
 
@@ -29,7 +33,7 @@
   font-size: 14px;
   width: 100px;
   padding: 12px;
-  margin: 0 auto; /* Center the button horizontally */
+  margin: 0 auto;
 }
 
 .btn:hover {
