--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,6 +1,6 @@
 .SearchBox {
   display: flex;
-  flex-direction: column; /* Stack label and input vertically */
+  flex-direction: column;
   padding: 10px 20px;
   border: 1px solid black;
   border-radius: 10px;
@@ -12,13 +12,13 @@
 }
 
 .label {
-  margin-bottom: 8px; /* Space between label and input */
+  margin-bottom: 8px;
 }
 
 .input {
-  width: 100%; /* Make input fill the container */
-  padding: 8px; /* Optional padding for the input */
-  box-sizing: border-box; /* Include padding in the width */
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
 }
 
 .btn {
